# ai-content-audit

./: .gitignore  README.md  pyproject.toml
ai_content_audit/: __init__.py  audit_manager.py
ai_content_audit/loader/: __init__.py  checks_loader.py  data_loader.py  media_loader.py
ai_content_audit/models/: __init__.py  audit_content_model.py  audit_decision_model.py  audit_options_item_model.py  audit_result_model.py  audit_text_model.py
ai_content_audit/prompts/: __init__.py  builder.py  structured_output_prompt.py  system_prompt.py
example/: README.md  advanced_examples.py  basic_examples.py  batch_examples.py  example.py  file_examples.py  image_examples.py
example/data/items/: ad_audit_item.json  audit_item.json
example/data/texts/: advertisement.txt  blog.md  sample.md  sample.txt
test/: test_audit_manager.py  test_checks_loader.py  test_data_loader.py  test_media_loader.py
